--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material/icon-button": "^13.0.0",
+    "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
