--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.2",
     "@material-ui/core": "^4.12.3",
     "@material/icon-button": "^13.0.0",
     "@mui/icons-material": "^5.3.1",
